tests/cases/errors/fdisplay_unsupported/main.sv
module Top;
  initial begin
    $fdisplay(1, "x");
  end
endmodule
